<resources>
    <string name="app_name">校咖阅读</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="curl_page_btn">仿真翻页</string>
    <string name="str_book_loading">正在读取图书…</string>
    <string name="file_type">TXT</string>
    <string name="imported">已导入</string>
    <string name="chap_pattern">(^[0123456789零一二三四五六七八九十第])([0123456789零一二三四五六七八九十百千万]{1,9})([章节卷集部篇回])(.*)</string>
    <string name="fileCreateSql">CREATE TABLE xkBookInfo (_id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT, readIndex INTEGER,
        pageIndex INTEGER, path TEXT, date DATE, bookTybe INTEGER, fileTybe INTEGER, bookId TEXT,imgPath TEXT,
        pageSize INTEGER, updated DATE, chaptersCount INTEGER, bookSummaryId TEXT, isUpdatad INTEGER);</string>
    <string name="fileUpV2Sql">ALTER TABLE xkBookInfo ADD pageSize INTEGER;</string>
    <string name="fileSelectStr">SELECT * FROM xkBookInfo </string>
    <string name="fileSelectAllStr">SELECT * FROM xkBookInfo</string>
    <string name="searchCreateSql">CREATE TABLE xkSearchHistory (_id INTEGER PRIMARY KEY AUTOINCREMENT, title TEXT,  date DATE);</string>
    <string name="searchSelectStr">SELECT * FROM xkSearchHistory </string>
    <string name="searchHotCreateSql">CREATE TABLE xkSearchHot (id INTEGER, title TEXT,  date DATE);</string>
    <string name="searchHotSelectStr">SELECT * FROM xkSearchHot </string>
    <string name="main_but">打开文本</string>
    <string name="main_but1">插入</string>
    <string name="action_search">查询</string>
    <string name="action_add">导入</string>
    <string name="list_icon">列表图标</string>
    <string name="font_size_icon">文字调整图标</string>
    <string name="set_icon">设置图标</string>
    <string name="up_chapter">上一章</string>
    <string name="dn_chapter">下一章</string>
    <string name="title_activity_book_shelf">书架</string>
    <string name="title_activity_search_file">本地导入</string>
    <string name="title_activity_book_market">书城</string>
    <string name="title_activity_book_market_detail">BookMarketDetailActivity</string>
    <string name="book_more">更多</string>
    <string name="title_activity_main_read">书架</string>
    <string name="title_activity_main_read_book_shelf">书架</string>
    <string name="title_activity_main_read_book_market">书城</string>
    <string name="title_activity_main_read_my">我的</string>
    <string name="title_activity_book_details">BookDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_share">分享</string>
    <string name="action_back">返回</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_gratis">免费</string>
    <string name="book_details_hot_comment">热门评论</string>
    <string name="book_details_release_comment">发表评论</string>
    <string name="book_details_more_comment_lable">查看全部评论</string>
    <string name="book_details_serialize_word_count_lable">字 日更新</string>
    <string name="book_details_retention_ratio_lable">% 读者留存</string>
    <string name="book_details_lately_follower_lable">人 关注</string>
    <string name="book_details_separate">|</string>
    <string name="user_icon">user_icon</string>
    <string name="item_book_details_user_lv_lable">lv.</string>
    <string name="book_details_recommend_lable">猜你喜欢</string>
    <string name="book_details_more_recommend_lable">更多</string>
    <string name="title_activity_book_search">BookSearchActivity</string>
    <string name="action_search_view">搜索</string>
    <string name="book_search_hot_tab">热门搜索</string>
    <string name="search_history_tab">历史搜索</string>
</resources>
