<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/read_book_set_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/read_book_set_part"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="@color/setBackground"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/fontWhite"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/up_chapter"
                android:id="@+id/read_set_up_chapter"
                android:background="@drawable/selector_set_but_item"/>

            <SeekBar
                android:id="@+id/read_set_progressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:maxHeight="4dp"
                android:minHeight="4dp"
                android:max="100"
                android:progress="40"
                android:thumb="@color/colorWhile"
                android:progressDrawable="@drawable/progressbar"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/fontWhite"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/dn_chapter"
                android:id="@+id/read_set_dn_chapter"
                android:background="@drawable/selector_set_but_item"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/read_set_list_bn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:src="@drawable/ic_list_white_24dp"
                android:contentDescription="@string/list_icon"
                android:background="@drawable/selector_set_but_item"/>

            <ImageView
                android:id="@+id/read_set_size_bn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/font_size_icon"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:background="@drawable/selector_set_but_item"
                android:src="@drawable/ic_text_fields_white_24dp" />

            <ImageView
                android:id="@+id/read_set_set_bn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/set_icon"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@drawable/selector_set_but_item"
                android:src="@drawable/ic_settings_white_24dp"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>
