<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingTop="16dp"
        tools:context=".view.fragment.BookDetailsSummaryFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/book_details_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:lineSpacingMultiplier="1.5"
            android:ellipsize="end"
            android:maxLines="5"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/book_details_tag"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            app:layout_constraintTop_toBottomOf="@+id/book_details_summary"
            android:paddingStart="24dp"
            android:paddingEnd="24dp" />

        <View
            android:id="@+id/book_details_line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorReadDetailsWhile"
            app:layout_constraintTop_toBottomOf="@+id/book_details_tag"/>

        <TextView
            android:id="@+id/book_details_hot_comment_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/book_details_line1"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="24dp"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:textColor="@color/fontBlack"
            android:textSize="16sp"
            android:text="@string/book_details_hot_comment"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/book_details_release_comment_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/book_details_line1"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="24dp"
            android:paddingStart="0dp"
            android:paddingEnd="24dp"
            android:text="@string/book_details_release_comment"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/book_details_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/book_details_hot_comment_lable"
            android:paddingStart="24dp"
            android:paddingEnd="24dp" />

        <TextView
            android:id="@+id/book_details_more_comment_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/book_details_review"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="24dp"
            android:textColor="@color/fontBlack"
            android:text="@string/book_details_more_comment_lable"
            tools:ignore="HardcodedText" />

        <View
            android:id="@+id/book_details_line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorReadDetailsWhile"
            app:layout_constraintTop_toBottomOf="@+id/book_details_more_comment_lable"/>


        <TextView
            android:id="@+id/book_details_recommend_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/book_details_line2"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="24dp"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:textColor="@color/fontBlack"
            android:textSize="16sp"
            android:text="@string/book_details_recommend_lable"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/book_details_more_recommend_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/book_details_line2"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="24dp"
            android:paddingStart="0dp"
            android:paddingEnd="24dp"
            android:text="@string/book_details_more_recommend_lable"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/book_details_recommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/book_details_recommend_lable"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>