<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.activity.BookSearchActivity"
    tools:showIn="@layout/activity_book_search">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/book_search_body_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/book_search_hot_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:padding="16dp"
                android:text="@string/book_search_hot_tab"/>

            <ImageView
                android:id="@+id/book_search_hot_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/ic_cached_black_24dp"
                android:contentDescription="@string/list_icon"
                android:background="@drawable/selector_read_list_item"
                android:padding="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                app:layout_constraintTop_toBottomOf="@id/book_search_hot_tab"
                android:background="@color/colorReadDetailsWhile"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/book_search_hot_tab"
                android:id="@+id/book_search_hot_recycler_view"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/book_search_history_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/book_search_hot_recycler_view"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/search_history_tab"/>

            <ImageView
                android:id="@+id/book_search_history_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/book_search_hot_recycler_view"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/ic_delete_forever_black_24dp"
                android:contentDescription="@string/list_icon"
                android:background="@drawable/selector_read_list_item"
                android:padding="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                app:layout_constraintTop_toBottomOf="@id/book_search_history_tab"
                android:background="@color/colorReadDetailsWhile"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/book_search_history_tab"
                android:id="@+id/book_search_history_recycler_view"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/book_search_word_recycler_view"
        android:padding="8dp"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/book_search_result_recycler_view"
        android:padding="8dp"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>